Refactoring, fixing bugs and code smells